Fix menu text-align

--- a/app.css
+++ b/app.css
@@ -312,6 +312,7 @@ input[type="text"].new {
       button, label {
         cursor: pointer;
         font-size: large;
+        text-align: left;
       }
     }
   }
